# ryvo-protocol

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  agon_withdrawals.qedspec  package.json  rust-toolchain.toml  ryvo_withdrawals.qedspec
.qed/: config.json
.superstack/: idea-context.md
benchmarks/: README.md
docs/: agent-payments-competitive-landscape.html  client-message-schemas.md  payment-commitments.md  public-messaging.md
formal_verification/: agon_protocol.qedspec  ryvo_protocol.qedspec
logs/: bls-largest-round-search-results.jsonl  bls-max-participants-search-results.jsonl  bls-search-results.jsonl  bls-smoke-search-results.jsonl
migrations/: deploy.ts
programs/agon-protocol/: Cargo.toml
programs/agon-protocol/src/: bls.rs  errors.rs  events.rs  lib.rs
programs/agon-protocol/src/instructions/: clearing_round_message.rs  create_channel.rs  deposit.rs  deposit_for.rs  execute_withdrawal_timelocked.rs  initialize.rs  initialize_participant.rs  lock_channel_funds.rs  mod.rs  request_update_channel_authorized_signer.rs  request_withdrawal.rs  settle_clearing_round.rs  settle_commitment_bundle.rs  settle_individual.rs  token_registry.rs  update_inbound_channel_policy.rs  yield_bearing.rs
programs/agon-protocol/src/state/: config.rs  mod.rs  token_registry.rs  yield_strategy.rs
programs/mock-yield/: Cargo.toml
programs/mock-yield/src/: lib.rs
scripts/: agon-protocol-demo.sh  agon-protocol-demo.ts  bootstrap-yield-bearing.ts  colosseum-basic-setup.ts  colosseum-bundle-for-demo.ts  colosseum-channels-setup.ts  colosseum-drain-current.ts  colosseum-fund-wallets.ts  deploy-bare-safe.sh  deploy.sh  devnet-admin.cjs  export-benchmarks.ts  initialize-program.ts  prepare-local-test-suite.sh  ryvo-protocol-demo.cmd  ryvo-protocol-demo.sh  ryvo-protocol-demo.ts  setup-wallet.sh  test-local.ps1  test-runtime-setup.cjs  yield-bearing-demo.ts
shared/: channel-bucket-state.ts  protocol-bls.ts  yield.ts
tests/: audit-regressions.test.ts  bls-capacity-local.test.ts  bls-clearing-rounds.test.ts  bootstrap-isolated.test.ts  business-logic.test.ts  channels.test.ts  clearing-rounds.test.ts  deposits.test.ts  edge-cases.test.ts  errors.test.ts  message-v4.test.ts  multilateral-capacity.test.ts  participants.test.ts  protocol.test.ts  (+6 more)
(+73 files in other folders)
